--- a/admin/views/modal-delete-color.html
+++ b/admin/views/modal-delete-color.html
@@ -11,7 +11,7 @@
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-show" data-dismiss="modal"><i class="fa fa-check"></i> Aceptar</button>
+            <button id="btn-delete-color" type="button" class="btn btn-show" data-dismiss="modal" data-id="{{id}}"><i class="fa fa-check"></i> Aceptar</button>
             <button type="button" class="btn btn-red" data-dismiss="modal"><i class="fa fa-ban"></i> Cancel</button>
           </div>
         </div>
