--- a/admin/views/ofertas.html
+++ b/admin/views/ofertas.html
@@ -7,6 +7,7 @@
                 <h1>Ofertas</h1>
                 <div class="pull-right">
                   <ul class="files">
+                    <li><a href="index.php?ctrl=ofertas&action=create" class="btn btn-create"><i class="fa fa-plus"></i> Nuevo</a></li>
                     <li><button class="btn btn-red" title="CVS"><i class="fa fa-file-text-o"></i></button></li>
                     <li><button class="btn btn-red" title="Excel"><i class="fa fa-file-excel-o" ></i></button></li>
                     <li><button class="btn btn-red" title="PDF"><i class="fa fa-file-pdf-o"></i></button></li>
