--- a/css/buttons.css
+++ b/css/buttons.css
@@ -239,12 +239,13 @@ fieldset[disabled] .btn-delete.active {
   color: #FF6C60; 
   background-color: #FFFFFF; 
 }
+
 /* BTN-SHOW */
 
 .btn-show { 
-  color: #FFFFFF; 
-  background-color: #36BBA6; 
-  border-color: #36BBA6; 
+  color: #ffffff; 
+  background-color: #57C8F2; 
+  border-color: #57C8F2; 
 } 
  
 .btn-show:hover, 
@@ -252,9 +253,9 @@ fieldset[disabled] .btn-delete.active {
 .btn-show:active, 
 .btn-show.active, 
 .open .dropdown-toggle.btn-show { 
-  color: #FFFFFF; 
-  background-color: #36BBA6; 
-  border-color: #36BBA6; 
+  color: #ffffff; 
+  background-color: #57C8F2; 
+  border-color: #57C8F2; 
 } 
  
 .btn-show:active, 
@@ -278,13 +279,13 @@ fieldset[disabled] .btn-show:active,
 .btn-show.disabled.active, 
 .btn-show[disabled].active, 
 fieldset[disabled] .btn-show.active { 
-  background-color: #36BBA6; 
-  border-color: #36BBA6; 
+  background-color: #57C8F2; 
+  border-color: #57C8F2; 
 } 
  
 .btn-show .badge { 
-  color: #36BBA6; 
-  background-color: #FFFFFF; 
+  color: #57C8F2; 
+  background-color: #ffffff; 
 }
 
 /* BTN-EDIT */
@@ -336,6 +337,52 @@ fieldset[disabled] .btn-edit.active {
 }
 
 
+/*  CREATE  */
+.btn-create { 
+  color: #ffffff; 
+  background-color: #36BBA6; 
+  border-color: #36BBA6; 
+} 
+ 
+.btn-create:hover, 
+.btn-create:focus, 
+.btn-create:active, 
+.btn-create.active, 
+.open .dropdown-toggle.btn-create { 
+  color: #ffffff; 
+  background-color: #36BBA6; 
+  border-color: #36BBA6; 
+} 
+ 
+.btn-create:active, 
+.btn-create.active, 
+.open .dropdown-toggle.btn-create { 
+  background-image: none; 
+} 
+ 
+.btn-create.disabled, 
+.btn-create[disabled], 
+fieldset[disabled] .btn-create, 
+.btn-create.disabled:hover, 
+.btn-create[disabled]:hover, 
+fieldset[disabled] .btn-create:hover, 
+.btn-create.disabled:focus, 
+.btn-create[disabled]:focus, 
+fieldset[disabled] .btn-create:focus, 
+.btn-create.disabled:active, 
+.btn-create[disabled]:active, 
+fieldset[disabled] .btn-create:active, 
+.btn-create.disabled.active, 
+.btn-create[disabled].active, 
+fieldset[disabled] .btn-create.active { 
+  background-color: #36BBA6; 
+  border-color: #36BBA6; 
+} 
+ 
+.btn-create .badge { 
+  color: #36BBA6; 
+  background-color: #ffffff; 
+}
 
 
 
@@ -357,9 +404,15 @@ CAFE
 AZUL
 #57c8f2*/
 
-
+/*
 .alert.alert-error {
   background-color: #fdeaea !important;
+  color: #f00 !important;
+  border: 1px solid #f27b81 !important;
+}
+*/
+.alert.alert-error {
+  background-color: #fff !important;
   color: #f00 !important;
   border: 1px solid #f27b81 !important;
 }
