Conexion con BD vistas editar, listar y mostrar CATALOGOS,
cambio de formato fecha, validación tipo descripción y alfanumérico

--- a/admin/views/categoria-edit.html
+++ b/admin/views/categoria-edit.html
@@ -7,7 +7,7 @@
                 <h1>Categoria</h1>
               </header>
               <div class="panel-body">
-                <form method="post" class="form-horizontal form-label-left" action="{{action}}" onsubmit="return validate()" enctype="multipart/form-data" data-validate>
+                <form method="post" class="form-horizontal form-label-left" action="" onsubmit="return validate()" enctype="multipart/form-data" data-validate>
                   <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                     <div class="profile_img">
                       <div id="crop-avatar">
