--- a/admin/views/catalogo-view.html
+++ b/admin/views/catalogo-view.html
@@ -12,7 +12,7 @@
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img src="../img/200x200.png" alt="catalogo" class="img-thumbnail">
+                          <img src="{{image}}" alt="catalogo" class="img-thumbnail">
                         </div>
                       </div>
                     </div>
