conexión vistas edit, view y list descuentos

--- a/admin/views/descuentos.html
+++ b/admin/views/descuentos.html
@@ -53,8 +53,8 @@
                       <td>{{descuento}}</td>
                       <td>{{precio}}</td>
                       <td>{{cantidad}}</td>
-                      <td>{{desde}}</td>
-                      <td>{{hasta}}</td>
+                      <td>{{fecha_inicio}}</td>
+                      <td>{{fecha_fin}}</td>
                       <td>
                         <a href="index.php?ctrl=descuentos&action=view&id={{id}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
                         <a href="index.php?ctrl=descuentos&action=edit&id={{id}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
