--- a/admin/views/descuento-edit.html
+++ b/admin/views/descuento-edit.html
@@ -7,13 +7,12 @@
                 <h1>Descuento</h1>
               </header>
               <div class="panel-body">
-                <form id="" class="form-horizontal form-label-left" onsubmit="return validate()" data-validate>
+                <form method="post" class="form-horizontal form-label-left" onsubmit="return validate()" enctype="multipart/form-data" data-validate>
                   <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                     <div class="profile_img">
                       <div id="crop-avatar">
-                        <!-- Current avatar -->
                         <div>
-                          <img id="image-file" src="../img/200x200.png" alt="category" class="img-thumbnail">
+                          <img id="image-file" src="{{image}}" alt="descuento" data-image>
                         </div>
                       </div>
                     </div>
@@ -36,9 +35,9 @@
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="producto" name="producto" class="form-control col-md-7 col-xs-12" data-required>
                           <option value="">Seleccione</option>
-                          <option value="1">ITM123-9</option>
-                          <option value="2">PAN456-C</option>
-                          <option value="3">BRA4854-Z</option>
+                          <!--row-->
+                          <option value="{{producto.id}}">{{producto.nombre}}</option>
+                          <!--.row-->
                         </select>
                       </div>
                     </div>
@@ -46,7 +45,7 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="descuento">Descuento (%) <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="number" id="descuento" name="descuento" min="0" step="1" class="form-control col-md-7 col-xs-12" value="{{descuento}}" data-required data-integer/>
+                        <input type="number" id="descuento" name="descuento" min="0" step="1" max="100" class="form-control col-md-7 col-xs-12" value="{{descuento}}" data-required data-integer/>
                       </div>
                     </div>
                     <div class="form-group">
@@ -57,21 +56,21 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="desde">Desde <span class="required">*</span></label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="fecha_inicio">Desde <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input class="form-control" type="text" id="desde" name="desde" placeholder="dd/mm/aaaa" data-required value="{{desde}}"/>
+                        <input class="form-control" type="text" id="fecha_inicio" name="fecha_inicio" placeholder="aaaa/mm/dd" data-required value="{{fecha_inicio}}"/>
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="hasta">Hasta <span class="required">*</span></label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="fecha_fin">Hasta <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input class="form-control" type="text" id="hasta" name="hasta" placeholder="dd/mm/aaaa" data-required value="{{hasta}}"/>
+                        <input class="form-control" type="text" id="fecha_fin" name="fecha_fin" placeholder="aaaa/mm/dd" data-required value="{{fecha_fin}}"/>
                       </div>
                     </div>
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="precio">Precio</label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="number" min="0" step="0.5" id="precio" name="precio" class="form-control col-md-7 col-xs-12" disabled>
+                        <input type="number" min="0" step="0.5" id="precio" name="precio" class="form-control col-md-7 col-xs-12" value="{{precio}}" >
                       </div>
                     </div>
 
