--- a/admin/views/descuento-view.html
+++ b/admin/views/descuento-view.html
@@ -4,15 +4,14 @@
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h1>Special Price</h1>
+                <h1>Descuento</h1>
               </header>
               <div class="panel-body">
                 <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                     <div class="profile_img">
                       <div id="crop-avatar">
-                        <!-- Current avatar -->
                         <div>
-                          <img src="../img/200x200.png" alt="Avatar" class="img-thumbnail">
+                          <img src="{{image}}" alt="descuento" class="img-thumbnail">
                         </div>
                       </div>
                     </div>
@@ -47,34 +46,27 @@
                         </tr>
                         <tr>
                           <th scope="row">Desde :</th>
-                          <td>{{desde}}</td>
+                          <td>{{fecha_inicio}}</td>
                         </tr>
                         <tr>
                           <th scope="row">Hasta :</th>
-                          <td>{{hasta}}</td>
+                          <td>{{fecha_fin}}</td>
                         </tr>
                         <tr>
                           <th scope="row">Acción </th>
                           <td class=" last">
-                            <a href="index.php?ctrl=descuentos&action=view&id={{id}}" class="btn btn-show"><i class="fa fa-eye"></i> Ver </a>
-                            <a href="index.php?ctrl=descuentos&action=edit&id={{id}}" class="btn btn-edit"><i class="fa fa-pencil"></i> Editar </a>
+                            <a href="{{descuento-view}}" class="btn btn-show"><i class="fa fa-eye"></i> Ver </a>
+                            <a href="{{descuento-edit}}" class="btn btn-edit"><i class="fa fa-pencil"></i> Editar </a>
                             <a href="#" id="{{id}}" data-toggle="modal" data-target="#delete-item" class="btn btn-delete"> <i class="fa fa-eraser"></i> Eliminar </a>
                           </td>
                         </tr>
                       </tbody>
                     </table>
                   </div>
-
                 </div>
               </div>
             </section>
           </div>
         </div>
       </div>
-      <!--<div class="container-fluid" ></div>-->
     </div>
-    <?php 
-      require_once('views/footer.html');
-    ?>
-</body>
-</html>
