cambiar id por nombre

--- a/admin/views/descuento-edit.html
+++ b/admin/views/descuento-edit.html
@@ -36,7 +36,7 @@
                         <select id="producto" name="producto" class="form-control col-md-7 col-xs-12" data-required>
                           <option value="">Seleccione</option>
                           <!--row-->
-                          <option value="{{producto.id}}">{{producto.nombre}}</option>
+                          <option value="{{producto_id}}">{{producto_nombre}}</option>
                           <!--.row-->
                         </select>
                       </div>
