--- a/admin/views/descuento-view.html
+++ b/admin/views/descuento-view.html
@@ -30,7 +30,7 @@
                         </tr>
                         <tr>
                           <th scope="row">Producto :</th>
-                          <td>{{producto}}</td>
+                          <td>{{producto_nombre}}</td>
                         </tr>
                         <tr>
                           <th scope="row">Descuento (%) :</th>
