--- a/admin/views/descuentos.html
+++ b/admin/views/descuentos.html
@@ -49,7 +49,7 @@
                     <tr>
                       <td>{{id}}</td>
                       <td>{{codigo}}</td>
-                      <td>{{producto}}</td>
+                      <td>{{producto_nombre}}</td>
                       <td>{{descuento}}</td>
                       <td>{{precio}}</td>
                       <td>{{cantidad}}</td>
