--- a/admin/views/oferta-edit.html
+++ b/admin/views/oferta-edit.html
@@ -7,12 +7,12 @@
                 <h1>Oferta</h1>
               </header>
               <div class="panel-body">
-                <form method="post" class="form-horizontal form-label-left" onsubmit="return validate()" data-validate>
+                <form method="post" class="form-horizontal form-label-left" onsubmit="return validate()" enctype="multipart/form-data" data-validate>
                   <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img id="image-file" src="../img/200x200.png" alt="oferta" data-image>
+                          <img id="image-file" src="{{image}}" alt="oferta" data-image>
                         </div>
                       </div>
                     </div>
@@ -38,23 +38,23 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="producto">Producto <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="producto" name="producto" class="form-control col-md-7 col-xs-12" data-required>
-                          <option value="">Select an option</option>
-                          <option value="1">ITM123-9</option>
-                          <option value="2">PAN456-C</option>
-                          <option value="3">BRA4854-Z</option>
+                          <option value="">Seleccione</option>
+                          <!--row-->
+                          <option value="{{producto_id}}">{{producto_nombre}}</option>
+                          <!--.row-->
                         </select>
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="desde">Desde <span class="required">*</span></label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="fecha_inicio">Desde <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input class="form-control" type="text" id="desde" name="desde" placeholder="dd/mm/aaaa" data-required value="{{desde}}"/>
+                        <input class="form-control" type="text" id="fecha_inicio" name="fecha_inicio" placeholder="aaaa/mm/dd" data-required value="{{fecha_inicio}}"/>
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="hasta">Hasta <span class="required">*</span></label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="fecha_fin">Hasta <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input class="form-control" type="text" id="hasta" name="hasta" placeholder="dd/mm/aaaa" data-required value="{{hasta}}"/>
+                        <input class="form-control" type="text" id="fecha_fin" name="fecha_fin" placeholder="aaaa/mm/dd" data-required value="{{fecha_fin}}"/>
                       </div>
                     </div>
                     <div class="form-group">
