--- a/admin/views/ofertas.html
+++ b/admin/views/ofertas.html
@@ -21,10 +21,10 @@
                     <tr>
                       <th>#</th>
                       <th>Código</th>
-                      <th>Cantidad</th>
                       <th>Producto</th>
+                      <th>Cantidad de artículos</th>
                       <th>Precio</th>
-                      <th>De</th>
+                      <th>Desde</th>
                       <th>Hasta</th>
                       <th class=" no-link last"><span class="nobr">Action</span></th>
                     </tr>
@@ -33,10 +33,10 @@
                     <tr>
                       <th>#</th>
                       <th>Código</th>
-                      <th>Cantidad</th>
                       <th>Producto</th>
+                      <th>Cantidad de artículos</th>
                       <th>Precio</th>
-                      <th>De</th>
+                      <th>Desde</th>
                       <th>Hasta</th>
                       <th class=" no-link last"><span class="nobr">Action</span></th>
                     </tr>
@@ -46,11 +46,11 @@
                     <tr>
                       <td>{{id}}</td>
                       <td>{{codigo}}</td>
-                      <td>{{cantidad}}</td>
                       <td>{{producto}}</td>
+                      <td>{{cantidad}}</td>
                       <td>{{precio}}</td>
-                      <td>{{de}}</td>
-                      <td>{{hasta}}</td>
+                      <td>{{fecha_inicio}}</td>
+                      <td>{{fecha_fin}}</td>
                       <td>
                         <a href="{{oferta-view}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
                         <a href="{{oferta-edit}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
