--- a/admin/views/ofertas.html
+++ b/admin/views/ofertas.html
@@ -46,7 +46,7 @@
                     <tr>
                       <td>{{id}}</td>
                       <td>{{codigo}}</td>
-                      <td>{{producto}}</td>
+                      <td>{{producto_nombre}}</td>
                       <td>{{cantidad}}</td>
                       <td>{{precio}}</td>
                       <td>{{fecha_inicio}}</td>
