--- a/admin/views/categorias.html
+++ b/admin/views/categorias.html
@@ -22,7 +22,7 @@
                     <tr>
                       <th>#</th>
                       <th>Código </th>
-                      <th>Categoria </th>
+                      <th>Nombre </th>
                       <th>Descripcion </th>
                       <th class="no-link last"><span class="nobr">Acción</span></th>
                     </tr>
@@ -31,7 +31,7 @@
                     <tr>
                       <th>#</th>
                       <th>Código </th>
-                      <th>Categoria </th>
+                      <th>Nombre </th>
                       <th>Descripcion </th>
                       <th class=" no-link last"><span class="nobr">Acción</span></th>
                     </tr>
