--- a/admin/views/subcategoria-view.html
+++ b/admin/views/subcategoria-view.html
@@ -11,7 +11,7 @@
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img src="../img/200x200.png" alt="subcategoria" class="img-thumbnail">
+                          <img src="{{image}}" alt="subcategoria">
                         </div>
                       </div>
                     </div>
@@ -34,7 +34,7 @@
                         </tr>
                         <tr>
                           <th scope="row">Categoria :</th>
-                          <td>{{categoria}}</td>
+                          <td>{{categoria_nombre}}</td>
                         </tr>
                         <tr>
                           <th scope="row">Descripción :</th>
