--- a/admin/views/subcategorias.html
+++ b/admin/views/subcategorias.html
@@ -21,7 +21,7 @@
                       <tr>
                         <th>#</th>
                         <th>Código </th>
-                        <th>Subcategoría </th>
+                        <th>Nombre </th>
                         <th>Categoría </th>
                         <th>Descripción </th>
                         <th class=" no-link last"><span class="nobr">Acción</span></th>
@@ -31,7 +31,7 @@
                       <tr>
                         <th>#</th>
                         <th>Código </th>
-                        <th>Subcategoría </th>
+                        <th>Nombre </th>
                         <th>Categoría </th>
                         <th>Descripción </th>
                         <th class=" no-link last"><span class="nobr">Acción</span></th>
@@ -44,7 +44,7 @@
                         <td>{{id}}</td>
                         <td>{{codigo}}</td>
                         <td>{{nombre}}</td>
-                        <td>{{categoria}}</td>
+                        <td>{{categoria_nombre}}</td>
                         <td>{{descripcion}}</td>
                         <td>
                           <a href="{{subcategoria-view}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
