--- a/admin/views/categoria-edit.html
+++ b/admin/views/categoria-edit.html
@@ -12,13 +12,13 @@
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img id="image-file" src="../img/200x200.png" alt="categoria" data-image>
+                          <img id="image-file" src="{{image}}" alt="categoria" data-image>
                         </div>
                       </div>
                     </div>
                     <div class="col-md-6 col-md-offset-3">
                       <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label>
-                      <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png" data-required  data-image/>
+                      <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png" data-image/>
                     </div>
                   </div>
 
@@ -39,7 +39,7 @@
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="descripcion">Description </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <textarea id="descripcion" name="descripcion" class="form-control col-md-7 col-sm-12 col-xs-12" class="form-control" rows="3" data-description> {{descripcion}}</textarea>
+                        <textarea id="descripcion" name="descripcion" class="form-control col-md-7 col-sm-12 col-xs-12" class="form-control" rows="3" data-description>{{descripcion}}</textarea>
                       </div>
                     </div>
                     <div class="form-group">
