--- a/admin/views/usuarios.html
+++ b/admin/views/usuarios.html
@@ -25,7 +25,6 @@
                         <th>Correo</th>
                         <th>Rol</th>
                         <th>Fecha nacimiento</th>
-                        <th>Teléfono</th>
                         <th class=" no-link last"><span class="nobr">Acción</span></th>
                       </tr>
                     </thead>
@@ -37,7 +36,6 @@
                         <th>Correo</th>
                         <th>Rol</th>
                         <th>Fecha nacimiento</th>
-                        <th>Teléfono</th>
                         <th class=" no-link last"><span class="nobr">Acción</span></th>
                       </tr>
                     </tfoot>
@@ -47,11 +45,10 @@
                       <tr>
                         <td>{{id}}</td>
                         <td>{{nombre}}</td>
-                        <td>{{apellido}}</td>
+                        <td>{{apellidos}}</td>
                         <td>{{correo}}</td>
                         <td>{{rol}}</td>
                         <td>{{fecha_nacimiento}}</td>
-                        <td>{{telefono}}</td>
                         <td>
                           <a href="index.php?ctrl=usuarios&action=view&id={{id}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
                           <a href="index.php?ctrl=usuarios&action=edit&id={{id}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
