--- a/admin/views/usuario-edit.html
+++ b/admin/views/usuario-edit.html
@@ -7,12 +7,12 @@
                 <h1>Usuario</h1>
               </header>
               <div class="panel-body">
-                <form method="post" class="form-horizontal form-label-left" onsubmit="return validate()" data-validate>
+                <form method="post" class="form-horizontal form-label-left" onsubmit="return validate()" enctype="multipart/form-data" data-validate>
                   <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                     <div class="profile_img">
                       <div id="crop-avatar">
                         <div>
-                          <img id="thumbnail-file" src="../img/200x200.png" alt="usuario" data-thumbnail>
+                          <img id="thumbnail-file" src="{{image}}" alt="usuario" data-thumbnail>
                         </div>
                       </div>
                     </div>
@@ -22,11 +22,11 @@
                       <div class="row">
                         <div class="col-xs-12 margin-top-15">
                           <div class="form-group">
-                            <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#modal-address"><i class="fa fa-plus"></i> <span class="hidden-xs hidden-sm">Agregar </span>domicilio </button>
+                            <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#modal-address"><i class="fa fa-plus"></i> <span class="hidden-xs hidden-sm"></span> Domicilio </button>
                           </div>
 
                           <div class="form-group">
-                            <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#modal-phone"><i class="fa fa-plus"></i> <span class="hidden-xs hidden-sm">Agregar </span>teléfono </button>
+                            <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#modal-phone"><i class="fa fa-plus"></i> <span class="hidden-xs hidden-sm"></span> Teléfono </button>
                           </div>
                         </div>
                       </div>
@@ -45,7 +45,7 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="apellidos">Apellidos <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="text" id="apellidos" name="apellidos" class="form-control col-md-7 col-xs-12" data-required data-lastname value="{{apellido}}"/>
+                        <input type="text" id="apellidos" name="apellidos" class="form-control col-md-7 col-xs-12" data-required data-lastname value="{{apellidos}}"/>
                       </div>
                     </div>
                     <div class="form-group">
@@ -59,7 +59,7 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="repetir_contrasena">Repetir contraseña <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="password" id="repetir_contrasena" name="repetir_contrasena" class="form-control col-md-7 col-xs-12" data-required data-password data-samepassword  value="{{repetir_contrasena}}"/>
+                        <input type="password" id="repetir_contrasena" name="repetir_contrasena" class="form-control col-md-7 col-xs-12" data-required data-password data-samepassword  value="{{contrasena}}"/>
                       </div>
                     </div>
                     <div class="form-group">
@@ -74,9 +74,9 @@
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="rol" name="rol" class="form-control col-md-7 col-xs-12" data-required >
                           <option value="">Seleccione</option>
-                          <option value="usuario">Usuario</option>
-                          <option value="gerente">Gerente</option>
-                          <option value="admin">Administrador</option>
+                          <!--rol-->
+                          <option value="{{rol_id}}">{{rol_nombre}}</option>
+                          <!--.rol-->
                         </select>
                       </div>
                     </div>
@@ -86,12 +86,12 @@
                       <div class="col-md-6 col-sm-6 col-xs-12">
                         <div class="radio">
                           <label>
-                            <input type="radio" class="checkbox" value="femenino" id="genero" name="genero" checked>Femenino
+                            <input type="radio" class="checkbox" value="femenino" id="genero" name="genero" {{femenino}}>Femenino
                           </label>
                         </div>
                         <div class="radio">
                           <label>
-                            <input type="radio" class="checkbox" value="masculino" id="genero" name="genero">Masculino
+                            <input type="radio" class="checkbox" value="masculino" id="genero" name="genero" {{masculino}}>Masculino
                           </label>
                         </div>
                       </div>
@@ -100,7 +100,7 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="fecha_nacimiento">Fecha de nacimiento <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input class="form-control" type="text" id="fecha_nacimiento" name="fecha_nacimiento" placeholder="dd/mm/aaaa" data-required/>
+                        <input class="form-control" type="text" id="fecha_nacimiento" name="fecha_nacimiento" placeholder="aaaa/mm/dd" value="{{fecha_nacimiento}}" data-required/>
                       </div>
                     </div>
                     <div class="form-group">
