--- a/admin/views/usuario-view.html
+++ b/admin/views/usuario-view.html
@@ -11,7 +11,7 @@
                   <div class="form-group profile_img">
                     <div id="crop-avatar">
                       <div>
-                        <img src="../img/200x200.png" alt="usuario" class="img-thumbnail">
+                        <img src="{{image}}" alt="usuario" class="img-thumbnail">
                       </div>
                     </div>
                   </div>
@@ -30,15 +30,11 @@
                       </tr>
                       <tr>
                         <th scope="row">Apellido :</th>
-                        <td>{{apellido}}</td>
+                        <td>{{apellidos}}</td>
                       </tr>
                       <tr>
                         <th scope="row">Correo :</th>
                         <td>{{correo}}</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">Teléfono :</th>
-                        <td>{{telefono}}</td>
                       </tr>
                       <tr>
                         <th scope="row">Género :</th>
@@ -55,8 +51,8 @@
                       <tr>
                         <th scope="row">Acción </th>
                         <td class=" last">
-                          <a href="index.php?ctrl=usuarios&action=view&id={{id}}" class="btn btn-show"><i class="fa fa-eye"></i> Ver </a>
-                          <a href="index.php?ctrl=usuarios&action=edit&id={{id}}" class="btn btn-edit"><i class="fa fa-pencil"></i> Editar </a>
+                          <a href="{{usuario-view}}" class="btn btn-show"><i class="fa fa-eye"></i> Ver </a>
+                          <a href="{{usuario-edit}}" class="btn btn-edit"><i class="fa fa-pencil"></i> Editar </a>
                           <a href="#" id="{{id}}" data-toggle="modal" data-target="#delete-item" class="btn btn-delete"> <i class="fa fa-eraser"></i> Eliminar </a>
                         </td>
                       </tr>
@@ -73,44 +69,19 @@
               <header class="panel-heading">
                 <h3 class="text-red">Domicilios</h3>
               </header>
-                <div class="panel-body">
-                  <div class="col-sm-6 col-md-4">
-                    <div class="domicilio">
-                      <p class="text-red"><i class="fa fa-star"></i> PRINCIPAL</p>
-                      <p>{{calle}} {{exterior}} {{interior}},</p>
-                      <p><strong>Col. </strong>{{colonia}},</p>
-                      <p><strong>C.P. </strong>{{codigo_postal}},</p>
-                      <p>{{municipio}} {{estado}}</p>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <div class="domicilio">
-                      <p class="text-red"><i class="fa fa-star"></i> OFICINA</p>
-                      <p>{{calle}} {{exterior}} {{interior}},</p>
-                      <p><strong>Col. </strong>{{colonia}},</p>
-                      <p><strong>C.P. </strong>{{codigo_postal}},</p>
-                      <p>{{municipio}} {{estado}}</p>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <div class="domicilio">
-                      <p class="text-red"><i class="fa fa-star"></i> CASA</p>
-                      <p>{{calle}} {{exterior}} {{interior}},</p>
-                      <p><strong>Col. </strong>{{colonia}},</p>
-                      <p><strong>C.P. </strong>{{codigo_postal}},</p>
-                      <p>{{municipio}} {{estado}}</p>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <div class="domicilio">
-                      <p class="text-red"><i class="fa fa-star"></i> GGGG</p>
-                      <p>{{calle}} {{exterior}} {{interior}},</p>
-                      <p><strong>Col. </strong>{{colonia}},</p>
-                      <p><strong>C.P. </strong>{{codigo_postal}},</p>
-                      <p>{{municipio}} {{estado}}</p>
-                    </div>
+              <div class="panel-body">
+                <!--domicilio-->
+                <div class="col-sm-6 col-md-4">
+                  <div class="domicilio">
+                    <p class="text-red"><i class="fa fa-star"></i>{{primario}}</p>
+                    <p>{{calle}} {{exterior}} {{interior}},</p>
+                    <p><strong>Col. </strong>{{colonia}},</p>
+                    <p><strong>C.P. </strong>{{codigo_postal}},</p>
+                    <p>{{municipio}}, {{estado}}</p>
                   </div>
                 </div>
+                <!--.domicilio-->
+              </div>
             </section>
           </div>
         </div>
@@ -121,37 +92,19 @@
               <header class="panel-heading">
                 <h3 class="text-red">Teléfonos</h3>
               </header>
-                <div class="panel-body">
-                  <div class="col-sm-6 col-md-4">
-                    <div class="telefono">
-                      <p class="text-red"><i class="fa fa-star"></i> CELULAR</p>
-                      <p>({{lada}}) {{telefono}}</p>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <div class="telefono">
-                      <p class="text-red"><i class="fa fa-star"></i> CASA</p>
-                      <p>({{lada}}) {{telefono}}</p>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <div class="telefono">
-                      <p class="text-red"><i class="fa fa-star"></i> OFICINA</p>
-                      <p>({{lada}}) {{telefono}}</p>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-4">
-                    <div class="telefono">
-                      <p class="text-red"><i class="fa fa-star"></i> TRABAJO</p>
-                      <p>({{lada}}) {{telefono}}</p>
-                    </div>
+              <div class="panel-body">
+                <!--telefono-->
+                <div class="col-sm-6 col-md-4">
+                  <div class="telefono">
+                    <p class="text-red"><i class="fa fa-star"></i>{{tipo}}</p>
+                    <p>({{lada}}) {{telefono}}</p>
                   </div>
                 </div>
+                <!--.telefono-->
+              </div>
             </section>
           </div>
         </div>
-
-
       </div>
     </div>
 
