Load Data DESCUENTOS

--- a/admin/views/descuento-edit.html
+++ b/admin/views/descuento-edit.html
@@ -35,9 +35,9 @@
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="producto" name="producto" class="form-control col-md-7 col-xs-12" data-required>
                           <option value="">Seleccione</option>
-                          <!--row-->
+                          <!--producto-->
                           <option value="{{producto_id}}">{{producto_nombre}}</option>
-                          <!--.row-->
+                          <!--.producto-->
                         </select>
                       </div>
                     </div>
