--- a/admin/views/oferta-view.html
+++ b/admin/views/oferta-view.html
@@ -34,7 +34,7 @@
                         </tr>
                         <tr>
                           <th scope="row">Producto :</th>
-                          <td>{{producto_nombre}}</td>
+                          <td>{{producto}}</td>
                         </tr>
                         <tr>
                           <th scope="row">Precio :</th>
