Load Data SUBCATEGORIAS

--- a/admin/views/subcategoria-edit.html
+++ b/admin/views/subcategoria-edit.html
@@ -41,9 +41,9 @@
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="categoria" name="categoria" class="form-control col-md-7 col-xs-12" data-required >
                           <option value="">Seleccione</option>
-                          <option value="1">Dama</option>
-                          <option value="2">Caballero</option>
-                          <option value="3">Infantil</option>
+                          <!--categoria-->
+                          <option value="{{categoria_id}}">{{categoria_nombre}}</option>
+                          <!--.categoria-->
                         </select>
                       </div>
                     </div>
