--- a/admin/views/subcategoria-view.html
+++ b/admin/views/subcategoria-view.html
@@ -34,7 +34,7 @@
                         </tr>
                         <tr>
                           <th scope="row">Categoria :</th>
-                          <td>{{categoria_nombre}}</td>
+                          <td>{{categoria}}</td>
                         </tr>
                         <tr>
                           <th scope="row">Descripción :</th>
