--- a/admin/views/subcategorias.html
+++ b/admin/views/subcategorias.html
@@ -44,7 +44,7 @@
                         <td>{{id}}</td>
                         <td>{{codigo}}</td>
                         <td>{{nombre}}</td>
-                        <td>{{categoria_nombre}}</td>
+                        <td>{{categoria}}</td>
                         <td>{{descripcion}}</td>
                         <td>
                           <a href="{{subcategoria-view}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
