--- a/admin/views/catalogo-edit.html
+++ b/admin/views/catalogo-edit.html
@@ -43,14 +43,14 @@
                         <input class="form-control" type="text" id="fecha" name="fecha" placeholder="dd/mm/aaaa" data-required value="{{fecha}}"/>
                       </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group"> 
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="categoria">Categoría <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <select id="categoria" name="categoria" class="form-control col-md-7 col-xs-12" data-required>
                           <option value="">Seleccione</option>
-                          <option value="1">Dama</option>
-                          <option value="2">Caballero</option>
-                          <option value="3">Infantil</option>
+                          <!--categoria-->
+                          <option value="{{categoria_id}}">{{categoria_nombre}}</option>
+                          <!--.categoria-->
                         </select>
                       </div>
                     </div>
