Responsivo del panel, vistas view y list PRODUCTOS

--- a/admin/views/navigation.html
+++ b/admin/views/navigation.html
@@ -80,47 +80,56 @@
               <ul class="sidebar-menu">
                 <li class="active">
                   <a href="index.php">
-                    <i class="fa fa-home"></i> Home
+                    <i class="fa fa-home"></i> 
+                    <span class="hidden-xs">Home</span>
                   </a>
                 </li>
                 <li>
                   <a href="index.php?ctrl=usuarios">
-                    <i class="fa fa-users"></i> Usuarios
+                    <i class="fa fa-users"></i> 
+                    <span class="hidden-xs">Usuarios</span>
                   </a>
                 </li>
                 <li>
                   <a href="index.php?ctrl=productos">
-                    <i class="fa fa-black-tie"></i> Productos 
+                    <i class="fa fa-black-tie"></i> 
+                    <span class="hidden-xs">Productos</span>
                   </a>
                 </li>
                 <li>
                   <a href="index.php?ctrl=catalogos">
-                    <i class="fa fa-book"></i> Catálogos 
+                    <i class="fa fa-book"></i> 
+                    <span class="hidden-xs">Catálogos</span>
                   </a>
                 </li>
                 <li>
                   <a href="index.php?ctrl=categorias">
-                    <i class="fa fa-tag"></i> Categorias 
+                    <i class="fa fa-tag"></i> 
+                    <span class="hidden-xs">Categorias</span>
                   </a>
                 </li>
                 <li>
                   <a href="index.php?ctrl=subcategorias">
-                    <i class="fa fa-tags"></i> Subategorias 
+                    <i class="fa fa-tags"></i> 
+                    <span class="hidden-xs">Subategorias</span>
                   </a>
                 </li>
                 <li>
                   <a href="index.php?ctrl=ofertas">
-                    <i class="fa fa-gift"></i> Ofertas
+                    <i class="fa fa-gift"></i> 
+                    <span class="hidden-xs">Ofertas</span>
                   </a>
                 </li>
                 <li>
                   <a href="index.php?ctrl=descuentos">
-                    <i class="fa fa-dollar"></i> Descuentos
+                    <i class="fa fa-dollar"></i> 
+                    <span class="hidden-xs">Descuentos</span>
                   </a>
                 </li>
                 <li>
                   <a href="index.php?ctrl=colores">
-                    <i class="fa fa-paint-brush"></i> Colores
+                    <i class="fa fa-paint-brush"></i> 
+                    <span class="hidden-xs">Colores</span>
                   </a>
                 </li>
               </ul>
