--- a/admin/views/producto-edit.html
+++ b/admin/views/producto-edit.html
@@ -40,58 +40,22 @@
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="tallas">Tallas <span class="required">*</span></label>
-                      <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox" name="tallas" data-checked>12.0
-                          </label>
+                      <label class="control-label col-xs-6 hidden-xs" for="tallas">Tallas <span class="required">*</span></label>
+                      <label class="control-label col-xs-6 hidden-xs" for="tallas">Strock <span class="required">*</span></label>
+                      
+                      <div class="col-xs-12">
+                        <div class="form-group">
+                          <div class="checkbox col-md-3 col-sm-6 col-xs-12">
+                            <label>
+                              <input type="checkbox" name="tallas" data-checked>{{talla}}
+                            </label>
+                          </div>
+
+                          <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input type="number" id="stock" name="stock" min="0" step="1" class="form-control col-md-7 col-xs-12" data-required data-integer value="{{stock}}"/>
+                          </div>
                         </div>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox" name="tallas" data-checked>12.5
-                          </label>
-                        </div>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox" name="tallas" data-checked>13.0
-                          </label>
-                        </div>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox" name="tallas" data-checked>13.5
-                          </label>
-                        </div>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox" name="tallas" data-checked>14.0
-                          </label>
-                        </div>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox" name="tallas" data-checked>14.5
-                          </label>
-                        </div>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox" name="tallas" data-checked>15.0
-                          </label>
-                        </div>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox" name="tallas" data-checked>15.5
-                          </label>
-                        </div>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox" name="tallas" data-checked>16.0
-                          </label>
-                        </div>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox" name="tallas" data-checked>16.5
-                          </label>
-                        </div>
+
                       </div>
                     </div>
                   </div>
@@ -131,18 +95,6 @@
                           <textarea id="descripcion" name="descripcion" class="form-control col-md-7 col-xs-12" rows="3"  data-required data-description>{{descripcion}}</textarea>
                       </div>
                     </div>
-
-                    <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="color">Color <span class="required">*</span></label>
-                      <div class="col-md-6 col-sm-12 col-xs-12">
-                        <select id="color" name="color" class="form-control col-md-7 col-xs-12" multiple data-required>
-                          <option value="">Seleccione</option>
-                          <option value="dama">Negro</option>
-                          <option value="caballero">Negro-plata</option>
-                          <option value="infantil">Rojo</option>
-                        </select>
-                      </div>
-                    </div>
               
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="material">Material</label>
@@ -166,17 +118,21 @@
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="precio">Precio <span class="required">*</span></label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="color">Color <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="number" id="precio" name="precio" min="0" step="0.5" class="form-control col-md-7 col-xs-12" data-required data-money value="{{precio}}" />
+                        <select id="color" name="color" class="form-control col-md-7 col-xs-12" data-required>
+                          <option value="">Seleccione</option>
+                          <option value="dama">Negro</option>
+                          <option value="caballero">Negro-plata</option>
+                          <option value="infantil">Rojo</option>
+                        </select>
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="stock">Strock <span class="required">*</span>
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="precio">Precio <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="number" id="stock" name="stock" min="0" step="1" class="form-control col-md-7 col-xs-12" data-required data-integer value="{{stock}}"/>
+                        <input type="number" id="precio" name="precio" min="0" step="0.5" class="form-control col-md-7 col-xs-12" data-required data-money value="{{precio}}" />
                       </div>
                     </div>
 
