--- a/admin/views/producto-view.html
+++ b/admin/views/producto-view.html
@@ -8,89 +8,95 @@
               </header>
               <div class="panel-body">
                 <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
-                    <div class="profile_img">
-                      <div id="crop-avatar">
-                        <div>
-                          <img src="../img/200x200.png" alt="producto" class="img-thumbnail">
-                        </div>
+                  <div class="profile_img">
+                    <div id="crop-avatar">
+                      <div>
+                        <img src="../img/200x200.png" alt="producto" />
                       </div>
                     </div>
-                  </div>
+                  </div><br>
+                  <table class="table table-hover">
+                    <tbody>
+                      <tr>
+                        <th scope="row">ID :</th>
+                        <td>{{id}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Código :</th>
+                        <td>{{codigo}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Modelo :</th>
+                        <td>{{modelo}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Tallas</th>
+                        <th scope="row">Stock</th>
+                      </tr>
+                      <!--talla-->
+                      <tr>
+                        <td>{{talla}}</td>
+                        <td>{{stock}}</td>
+                      </tr>
+                      <!--.talla-->
+                    </tbody>
+                  </table>
+                </div>
 
-                  <div class="col-lg-8 col-md-7 col-sm-6 col-xs-12"> 
-                    <table class="table table-hover">
-                      <tbody>
-                        <tr>
-                          <th scope="row">ID :</th>
-                          <td>{{id}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Código :</th>
-                          <td>{{codigo}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Modelo :</th>
-                          <td>{{modelo}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Nombre :</th>
-                          <td>{{nombre}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Categoría :</th>
-                          <td>{{categoria}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Subcategoría :</th>
-                          <td>{{subcategoria}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Descripción :</th>
-                          <td>{{descripcion}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Color :</th>
-                          <td>{{color}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Material :</th>
-                          <td>{{material}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Marca :</th>
-                          <td>{{marca}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Altura :</th>
-                          <td>{{altura}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Talla :</th>
-                          <td>{{talla}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Precio :</th>
-                          <td>{{precio}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Stock :</th>
-                          <td>{{stock}}</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Acción </th>
-                          <td class=" last">
-                            <a href="index.php?ctrl=productos&action=view&id={{id}}" class="btn btn-show"><i class="fa fa-eye"></i> Ver </a>
-                            <a href="index.php?ctrl=productos&action=edit&id={{id}}" class="btn btn-edit"><i class="fa fa-pencil"></i> Editar </a>
-                            <a href="#" id="{{id}}" data-toggle="modal" data-target="#delete-item" class="btn btn-delete"> <i class="fa fa-eraser"></i> Eliminar </a>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
+                <div class="col-lg-8 col-md-7 col-sm-6 col-xs-12"> 
+                  <table class="table table-hover">
+                    <tbody>
+                      <tr>
+                        <th scope="row">Nombre :</th>
+                        <td>{{nombre}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Categoría :</th>
+                        <td>{{categoria}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Subcategoría :</th>
+                        <td>{{subcategoria}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Descripción :</th>
+                        <td>{{descripcion}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Material :</th>
+                        <td>{{material}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Marca :</th>
+                        <td>{{marca}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Altura :</th>
+                        <td>{{altura}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Color :</th>
+                        <td><img src="{{color}}"/></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Precio :</th>
+                        <td>{{precio}}</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">Acción </th>
+                        <td class=" last">
+                          <a href="index.php?ctrl=productos&action=view&id={{id}}" class="btn btn-show"><i class="fa fa-eye"></i> Ver </a>
+                          <a href="index.php?ctrl=productos&action=edit&id={{id}}" class="btn btn-edit"><i class="fa fa-pencil"></i> Editar </a>
+                          <a href="#" id="{{id}}" data-toggle="modal" data-target="#delete-item" class="btn btn-delete"> <i class="fa fa-eraser"></i> Eliminar </a>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
-            </section>
-          </div>
+            </div>
+          </section>
         </div>
       </div>
+    </div>
 
