--- a/admin/views/usuario-edit.html
+++ b/admin/views/usuario-edit.html
@@ -19,17 +19,6 @@
                     <div class="col-md-6 col-md-offset-3">
                       <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label>
                       <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png" data-thumbnail/>
-                      <div class="row">
-                        <div class="col-xs-12 margin-top-15">
-                          <div class="form-group">
-                            <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#modal-address"><i class="fa fa-plus"></i> <span class="hidden-xs hidden-sm"></span> Domicilio </button>
-                          </div>
-
-                          <div class="form-group">
-                            <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#modal-phone"><i class="fa fa-plus"></i> <span class="hidden-xs hidden-sm"></span> Teléfono </button>
-                          </div>
-                        </div>
-                      </div>
                     </div>
                   </div>
 
@@ -114,6 +103,62 @@
               </div>
             </section>
           </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <section class="panel">
+                <header class="panel-heading">
+                  <h3 class="text-red">Domicilios
+                    <div class="pull-right">
+                      <button class="btn btn-create" type="button" data-toggle="modal" data-target="#modal-address"><i class="fa fa-plus"></i> <span class="hidden-xs hidden-sm"></span> Nuevo </button>
+                    </div>
+                  </h3>
+                </header>
+                <div class="panel-body">
+                  <!--domicilio-->
+                  <div class="col-sm-6 col-md-4">
+                    <div class="domicilio">
+                      <div class="pull-right">
+                        <button class="btn btn-delete" id="{{id}}" type="button"><i class="fa fa-trash-o"></i></button>
+                      </div>
+                      <p class="text-red"><i class="fa fa-star"></i>{{primario}}
+                      </p>
+                      <p>{{calle}} {{exterior}} {{interior}},</p>
+                      <p><strong>Col. </strong>{{colonia}},</p>
+                      <p><strong>C.P. </strong>{{codigo_postal}},</p>
+                      <p>{{municipio}}, {{estado}}</p>
+                    </div>
+                  </div>
+                  <!--.domicilio-->
+                </div>
+              </section>
+            </div>
+          </div>
+          <div class="row">
+          <div class="col-xs-12">
+            <section class="panel">
+              <header class="panel-heading">
+                <h3 class="text-red">Teléfonos
+                  <div class="pull-right">
+                    <button class="btn btn-create" type="button" data-toggle="modal" data-target="#modal-phone"><i class="fa fa-plus"></i> <span class="hidden-xs hidden-sm"></span> Nuevo </button>
+                  </div>
+                </h3>
+              </header>
+              <div class="panel-body">
+                <!--telefono-->
+                <div class="col-sm-6 col-md-4">
+                  <div class="telefono">
+                    <div class="pull-right">
+                      <button class="btn btn-delete" id="{{id}}" type="button"><i class="fa fa-trash-o"></i></button>
+                    </div>
+                    <p class="text-red"><i class="fa fa-star"></i>{{tipo}}</p>
+                    <p>({{lada}}) {{telefono}}</p>
+                  </div>
+                </div>
+                <!--.telefono-->
+              </div>
+            </section>
+          </div>
+        </div>
         </div>
       </div>
     </div>
