Load Data DOMICILIOS

--- a/views/modal_address.html
+++ b/views/modal_address.html
@@ -14,8 +14,9 @@
             <div>
               <select class="form-control" id="pais" name="pais" data-required>
                 <option value="">Seleccione</option>
-                <option value="0">México</option>
-                <option value="1">Perú</option>
+                <!--pais-->
+                <option value="{{pais_id}}">{{pais_nombre}}</option>
+                <!--.pais-->
               </select>
             </div>
           </div>
@@ -24,8 +25,9 @@
             <div>
               <select class="form-control" id="estado" name="estado" data-required>
                 <option value="">Seleccione</option>
-                <option value="0">Jalisco</option>
-                <option value="1">Colima</option>
+                <!--estado-->
+                <option value="{{estado_id}}">{{estado_nombre}}</option>
+                <!--.estado-->
               </select>
             </div>
           </div>
@@ -34,8 +36,9 @@
             <div>
               <select class="form-control" id="municipio" name="municipio" data-required>
                 <option value="">Seleccione</option>
-                <option value="0">Guadalajara</option>
-                <option value="1">Zapopan</option>
+                <!--municipio-->
+                <option value="{{municipio_id}}">{{municipio_nombre}}</option>
+                <!--.municipio-->
               </select>
             </div>
           </div>
